updated to get adding articles working

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     </div><!-- /.container -->
 
     <footer>
-      &copy; Angular Demo
+      &copy; Angular Demo - <a href="#/articles/new">Add Article</a>
     </footer>
 
     <!-- jQuery first, then Bootstrap JS. -->
