added in ability to edit articles

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
   <body>
     <nav class="navbar navbar-inverse">
-      <a class="navbar-brand" href="#">Knowledge Base</a>
+      <a class="navbar-brand" href="#/categories">Knowledge Base</a>
     </nav>
 
     <div class="container">
@@ -21,7 +21,7 @@
     </div><!-- /.container -->
 
     <footer>
-      &copy; Angular Demo - <a href="#/articles/new">Add Article</a>
+      &copy; Angular Demo - <a href="#/article/new">Add Article</a>
     </footer>
 
     <!-- jQuery first, then Bootstrap JS. -->
